--- a/style.css
+++ b/style.css
@@ -1,14 +1,33 @@
+@import url('https://fonts.googleapis.com/css2?family=Rampart+One&display=swap');
+/* font-family: 'Rampart One', sans-serif; */
+
+@import url('https://fonts.googleapis.com/css2?family=Zen+Tokyo+Zoo&display=swap');
+/* font-family: 'Zen Tokyo Zoo', sans-serif; */
+
+@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Display&display=swap');
+/* font-family: 'Big Shoulders Stencil Display', sans-serif; */
+
+
+body {
+    background-image: url(pexels-benjamin-suter-3617500.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+}
+
 .day-container {
     clear: both;
-    margin-top: 20px;
+    margin-top: 2rem;
 }
 
 .weather-card {
-    background-color: #f5f5f5;
+    font-family: 'Big Shoulders Stencil Display', sans-serif;
+    background: linear-gradient(0deg, rgba(201,245,247,1) 8%, rgba(159,244,248,1) 32%, rgba(86,203,208,1) 51%, rgba(28,159,165,1) 77%);
     border: 1px solid #ccc;
     border-radius: 5px;
-    margin: 10px;
-    padding: 10px;
+    margin: 1rem;
+    padding: 1rem;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     width: 300px;
     float: left;
@@ -16,13 +35,59 @@
 
 .weather-card h3 {
     font-size: 24px;
-    margin: 10px 0 0;
-    padding: 10px 0;
-    background-color: #007BFF;
+    margin: 1rem 0 0;
+    padding: 1rem 0;
     color: white;
-    border-radius: 5px 5px 0 0;
 }
 
 .weather-info p {
-    margin: 10px 0;
+    margin: 1rem 0;
+}
+
+body>div.search-container {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    padding: 1rem;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: 17rem;
+    float: right;
+}
+
+#new-city {
+    height: 2rem;
+}
+
+#search-button {
+    color: white;
+    background-color: #007BFF;
+    border-radius: 5px;
+    border: none;
+    height: 2rem;
+}
+
+h1 {
+    text-align: center;
+    color: azure;
+    font-family: 'Rampart One', sans-serif;
+    font-size: 40px;
+}
+
+h2 {
+    text-align: center;
+    color: azure;
+    font-family: 'Zen Tokyo Zoo', sans-serif;
+    font-size: 35px;
+    font-weight: lighter;
+}
+
+h3 {
+    font-size: 24px;
+    margin: 2rem;
+    padding: 1rem;
+    background-color: #1d898e;
+    color: white;
+    border-radius: 5px;
+    text-align: center;
+    font-family: "Tilana", sans-serif;
 }
