--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ body {
 
 .day-container {
     clear: both;
-    margin-top: 2rem;
 }
 
 .weather-card {
@@ -33,11 +32,13 @@ body {
     float: left;
 }
 
-.weather-card h3 {
+.tittle {
     font-size: 24px;
     margin: 1rem 0 0;
     padding: 1rem 0;
+    text-align: center;
     color: white;
+    background-color: #1d898e;
 }
 
 .weather-info p {
@@ -46,12 +47,12 @@ body {
 
 body>div.search-container {
     margin-top: 1rem;
-    margin-bottom: 1rem;
     padding: 1rem;
     border: 1px solid #ccc;
     border-radius: 5px;
     width: 17rem;
     float: right;
+    margin-bottom: 4rem;
 }
 
 #new-city {
@@ -60,7 +61,7 @@ body>div.search-container {
 
 #search-button {
     color: white;
-    background-color: #007BFF;
+    background-color: #1d898e;
     border-radius: 5px;
     border: none;
     height: 2rem;
@@ -81,7 +82,7 @@ h2 {
     font-weight: lighter;
 }
 
-h3 {
+#weather-info > div > h3 {
     font-size: 24px;
     margin: 2rem;
     padding: 1rem;
