--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ h2 {
 
 .weather-card {
     font-family: 'Big Shoulders Stencil Display', sans-serif;
-    background: linear-gradient(0deg, rgba(201, 245, 247, 1) 8%, rgba(159, 244, 248, 1) 32%, rgba(86, 203, 208, 1) 51%, rgba(28, 159, 165, 1) 77%);
+background-color: #015E6F;
     border: 1px solid #ccc;
     border-radius: 5px;
     margin: 1rem;
@@ -57,7 +57,18 @@ h2 {
     zoom: 1;
     box-shadow: 6px 6px 10px 3px #183a43;
 }
+.weather-info-part {
+    margin: 0.5rem;
+    padding: 0.5rem;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background: linear-gradient(0deg, rgba(201, 245, 247, 1) 8%, rgba(159, 244, 248, 1) 32%, rgba(86, 203, 208, 1) 51%, rgba(28, 159, 165, 1) 77%);
+}
 
+.weather-info-part p {
+    margin: 0.5rem;
+    padding: 0.5rem;
+}
 
 #weather-info > div > div > img {
     width: 100px;
